# ai-discovery-agent

./: .checkov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  .zap-config.conf  .zap-rules.conf  ARCHITECTURE.md  Dockerfile  NOTICE  README.md  azure.yaml  bicepconfig.json  fix-whitespace.yaml  pyproject.toml
.chainlit/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/agents/: rai.agent.md
.github/workflows/: 01-ci.yml  02-ci-cd.yml  03-bicep-security.yml  03-checkov-security.yml  04-bandit-security.yml  05-zizmor-security.yml  10-release.yml  40-dast.yml  50-format-check.yml  50-format-pr.yml  50-format-request.yml  50-format-request.yml.old  51-apply-format.yml  51-format-check.yml  52-apply-format.yml  52-apply-format.yml.old  99-evergreen.yml  codeql.yml  codeqlfix.yml  copilot-setup-steps.yml  copyright-header-check.yml
.tools/: .checkov.yml  .pre-commit-config.yaml  .zap-env.yaml  .zap-rules.conf
agents/: Documenter.yaml  simple.yaml
config/: pages.yaml
docs/: AI_TRANSPARENCY_GUIDE.md  CONFIG.md  MODEL_CARD.md  RAI_REVIEW.md  RAI_REVIEW_SUMMARY.md  RELEASE_PROCESS.md  RESPONSIBLE_AI_PRINCIPLES.md
docs/security/: DAST_GUIDE.md  INCIDENT_REPORT_2026_02.md  README.md  SECURITY_BASELINE.md  SECURITY_REVIEW_CHECKLIST.md  SECURITY_REVIEW_SUMMARY.md  SECURITY_TESTING.md  STRIDE_THREAT_MODEL.md  ZAP_FINDINGS_ANALYSIS.md
docs/specs/: documenter_specs.md
docs/updates/: 251028_CONTAINER_DEPLOYMENT_MIGRATION.md
infra/: .checkov.yaml  main.bicep  main.bicepparam  main.parameters.json  resources.bicep  resources.bicep.backup
infra/modules/: acr.bicep  acr.role.bicep  appservice.plan.bicep  appservice.site.bicep  appservice.site.json  containerapp.bicep  nsg.bicep  storage.bicep  (+4 more)
prompts/: contoso_andermatt_works_persona.md  contoso_zermatt_national_bank_persona.md  design_thinking.md  document_generator_example.md  guardrails.md  hr_manager_talent_acquisition_persona.md  medical_specialist_clinic_use_case.md
scripts/: README.md  check-copyright-headers.sh  clean-folders.sh  create-rai-issues.sh  enable-network.sh  generate-notice.py  generate-notice.sh  map-env-vars.ps1  map-env-vars.sh  patch-up.sh  postprovision.sh  predeploy.ps1  predeploy.sh  preinfradelete.ps1  preinfradelete.sh  preprovision.ps1  preprovision.sh
src/: .bandit.yml  .dockerignore  .example.env  .webappignore  Dockerfile  LICENSE  NOTICE.tmp  README.md  auth.py  bandit.yml  chainlit.md  chat_handlers.py  debug.py  interfaces.py  main.py  pyproject.toml  server.py  startup.sh
src/.chainlit/: config.toml
src/.chainlit/translations/: fr-FR.json  it.json
src/agents/: __init__.py  agent.py  agent_manager.py  agent_registry.py  graph_agent.py  single_agent.py
src/aida/: __init__.py  __main__.py  app.py  chainlit.md  chainlit.py  exceptions.py  interfaces.py
src/aida/agents/: __init__.py  agent.py  agent_manager.py  agent_registry.py  graph_agent.py  single_agent.py
src/aida/persistence/: __init__.py  azure_storage.py  conversation_manager.py
src/aida/prompts/: auto_claims_customer_persona.md  contoso_andermatt_works.md  design_thinking_persona.md  hr_manager_talent_acquisition_use_case.md
src/aida/public/elements/: MermaidViewer.jsx
src/aida/static/config/: auth-config-example.yaml  pages-example.yaml  pages.schema.json  pages.yaml
src/aida/static/elements/: MermaidViewer.jsx
src/aida/static/prompts/: auto_claims_customer_persona.md  auto_claims_damage_report_use_case.md  contoso_andermatt_works_persona.md  example_knowledge.md  example_persona.md  facilitator_persona.md  guardrails.md  medical_specialist_clinic_persona.md
src/aida/tests/integration/: test_auth_integration.py  test_chat_integration.py
src/aida/tests/unit/: test_cached_loader.py  test_conversation_manager.py
src/aida/utils/: auth.py  cached_llm.py  cached_loader.py  chat_handlers.py  config.py  credentials.py  logging_setup.py  mermaid.py
src/config/: auth-config-example.yaml  pages-example.yaml  pages.v0.2.schema.json  pages.yaml
src/persistence/: __init__.py  azure_storage.py  conversation_manager.py
src/prompts/: contoso_zermatt_national_bank_persona.md  document_generator_persona.md
src/public/elements/: MermaidViewer.jsx
src/tests/: README.md  __init__.py
src/tests/fixtures/: __init__.py  data.py
src/tests/integration/: __init__.py  test_agent_integration.py  test_auth_integration.py  test_chat_integration.py  test_thread_isolation.py
src/tests/unit/: README_CONFIG_VALIDATION.md  __init__.py  test_agent_manager.py  test_agent_registry.py  test_auth.py  test_cached_llm.py  test_cached_loader.py  test_config.py  test_config_validation.py  test_conversation_manager.py  test_exceptions.py  test_graph_agent.py  test_header.py  test_single_agent.py  test_utils.py
src/utils/: __init__.py  cached_llm.py  cached_loader.py  config.py  credentials.py  logging_setup.py  mermaid.py  oauth_utils.py
(+14 files in other folders)
